# ansible

./: .gitignore  README.md  main.yml  mise.toml  share.yml  test.py
.cursor/rules/: ghostty-deploy.mdc  tmux-leader-deploy.mdc
roles/aerospace/files/: aerospace
roles/aerospace/tasks/: main.yml
roles/aerospace/templates/: aerospace.j2
roles/common/tasks/: main.yml
roles/fish/defaults/: main.yml
roles/fish/tasks/: main.yml
roles/fish/templates/: clipboard.fish.j2  config.fish.j2  zoxide-completions.fish.j2
roles/fzf/files/: fzf.zsh
roles/fzf/tasks/: main.yml
roles/fzf/templates/: fzf.zsh.j2  nbrc.j2
roles/ghostty/files/: config
roles/ghostty/tasks/: main.yml
roles/ghostty/templates/: config.ghostty.j2  config.j2  ghostty.zsh.j2
roles/kitty/leader/: Cargo.toml  Makefile  PLAN.md  leader_theme.yml
roles/kitty/leader/src/: action.rs  keymap.rs  keynode.rs  kitty.rs  launcher.rs  leader.rs  main.rs
roles/kitty/leader/src/leader/: context.rs  dividers.rs  event_loop.rs  layout.rs  message.rs  mod.rs  palette.rs  pick.rs  pills.rs  render.rs  theme.rs  theme_colors.rs
roles/nb/files/: nbrc
roles/tmux/leader/: Cargo.toml  Makefile  leader_theme.yml
roles/tmux/leader/src/: action.rs  attach_session.rs  diag.rs  keymap.rs  keynode.rs  launcher.rs  leader.rs  main.rs  move_session.rs  tmux.rs
roles/tmux/leader/src/action/: commands.rs  dispatch.rs  key_press.rs  mod.rs  pills.rs  state.rs
roles/tmux/leader/src/leader/: context.rs  dividers.rs  event_loop.rs  mod.rs  palette.rs  pick.rs  pills.rs  render.rs  tab_filter.rs  term.rs  theme.rs
(+94 files in other folders)
