[package]
name = "leader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "leader"
path = "src/main.rs"

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
anyhow      = "1"
ratatui     = "0.29"
libc        = "0.2"

[profile.release]
strip         = true
opt-level     = "z"
lto           = true
codegen-units = 1
