[package]
name = "tmux-leader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tmux-leader"
path = "src/main.rs"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow     = "1"
ratatui    = "0.30"
tui-input = { version = "0.15", default-features = false, features = ["ratatui-crossterm"] }

[profile.release]
strip         = true
opt-level     = "z"
lto           = true
codegen-units = 1
